examples/bad/ex1.shl
int main(){
    int a=b+1;
    return 0;
}